# Neko-Love

./: .dockerignore  .editorconfig  .env-example  LICENSE  README.md  docker-compose.yml
api/: .env  .env-example  .gitignore  Cargo.toml  Dockerfile  README.md
api/migrations/: 20250702204509_create_users_table.sql  20250702212306_update_users_table.sql  20250706114016_update_users_table.sql  20250712062711_create_users_table.sql
api/src/: app_state.rs  main.rs
api/src/handlers/: images.rs  me.rs  mod.rs  user_authorise.rs  user_fetch.rs  user_register.rs  user_update.rs
api/src/middlewares/: logging.rs  rate_limit.rs
api/src/models/: auth.rs  keys.rs  mod.rs  response.rs  user.rs
api/src/services/: api_key_service.rs  auth_token_service.rs  file_service.rs  image_service.rs  mod.rs
bot/: .env-example  Cargo.toml  Dockerfile  README.md
bot/src/: shard.rs
bot/src/commands/: about.rs  mod.rs  ping.rs
docs/: Dockerfile  README.md  package-lock.json  package.json
docs/docs/: index.md
docs/docs/.vuepress/: config.ts
docs/docs/docs/: FAQ.md  SeriaClient.md  SeriaClientBuilder.md  click-me.md  getting-started.md
web/: .env-example  Dockerfile  README.md  app.config.ts  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
web/app/: app.vue  error.vue
web/app/components/: Dashboard.vue  Gallery.vue  (+4 more)
web/assets/: style.css
web/components/: Dashboard.vue  Home.vue  Login.vue  LoginOld.vue  Navbar.vue  Register.vue
web/composables/: useAuth.ts
web/middleware/: auth.ts
web/pages/: dashboard.vue  login.vue
web/types/: interfaces.d.ts
(+12 files in other folders)
