[package]
name = "neko-love-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
dashmap = "6.1.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
mime_guess = "2.0.5"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "mysql", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
